docs/roadmap-and-releases/versions/v1.6.0/test-report.md
# Test Report

## Testing Scope

The scope of testing is to verify fitment to the specification from the perspective of&#x20;

●      Functionality&#x20;

●      Deployability&#x20;

●      Configurability&#x20;

●      Customizability

&#x20;

Verification is performed not only from the end user perspective but also from the System Integrator (SI) point of view. Hence, the Configurability and Extensibility of the software is also assessed. This ensures the readiness of software for use in multiple countries. Since MOSIP is an “API First” product platform, Verification scope required comprehensive automation testing for all the MOSIP APIs. An automation Test Rig is created for the same.

&#x20;

&#x20;

## Test Approach <a href="#heading-h.2et92p0" id="heading-h.2et92p0"></a>

Persona based approach has been adopted to perform the IV\&V, by simulating test scenarios that resemble a real-time implementation.

&#x20;

A Persona is a fictional character/user profile created to represent a user type that might use a product/or a service in a similar way. Persona based testing is a software testing technique that puts software testers in the customer's shoes, assesses their needs from the software and thereby determines use cases/scenarios that the customers will execute. The persona needs may be addressed through any of the following.

&#x20;

●      Functionality&#x20;

●      Deployability&#x20;

●      Configurability&#x20;

●      Customizability

&#x20;

The verification methods may differ based on how the need was addressed.

&#x20;

For regression check, “MOSIP Test Rig” - an automation testing suite - which is indigenously designed and developed for supporting persona based testing. MOSIP Test Rig covers the end to end test execution and reporting. The end to end functional test scenarios are written starting from pre-registration, to creation of packet in registration center, processing the packet through the registration processor, generating UIN and authenticating identity using IDA through various permutation and combinations of cases being covered. MOSIP Test Rig will be an open source artifact which can also be enhanced and used by countries to validate the SI deliveries before going live. Persona classes include both negative and positive personas. Negative persona classes include users like Bribed Registration Office, Malicious Insider etc. The needs of positive persona classes must be met, whereas the needs of negative persona classes must be effectively restricted by the software.

## Verified configuration <a href="#heading-h.tyjcwt" id="heading-h.tyjcwt"></a>

Verification is performed on various configurations as mentioned below

Default configuration -

&#x20;    ●         eSignet with 7 languages (English/Khmer/Hindi/Kannada/Tamil/Arabic/French)

&#x20;    ●         Signup with 2 languages (Khmer/English)

&#x20;

Main feature tested:

&#x20;

Signup Portal with mock ID

Login with Password with mock ID

Forgot Password with mock ID

Login with OTP with mock ID

Login with biometrics with mock ID

Login with KBI with mock ID

Identity verification process (L2 flow) with mock ID

Signup Portal with MOSIP IDA

Login with Password with MOSIP IDA

Forgot Password with MOSIP IDA

Login with OTP with MOSIP IDA

Login with biometrics MOSIP IDA

Sunbird Plugin with MOSIP IDA

Critical and Blocker Bugs verification

Docker Compose testing for eSignet and signup (windows, Linux and Mac)

## Feature Health <a href="#heading-h.mxjdc7cxya9w" id="heading-h.mxjdc7cxya9w"></a>

![](file:///Users/keshavsingh/Library/Group%20Containers/UBF8T346G9.Office/TemporaryItems/msohtmlclip/clip_image002.jpg)

&#x20;

&#x20;

## Test execution statistics <a href="#heading-h.2s8eyo1" id="heading-h.2s8eyo1"></a>

## Functional test results <a href="#heading-h.x3l4xp1n67g2" id="heading-h.x3l4xp1n67g2"></a>

&#x20;

Below are the test metrics by performing functional testing using mock MDS, mock Auth and mock ABIS. The process followed was black box testing which based its test cases on the specifications of the software component under test. The functional tests were performed in combination of individual module testing as well as integration testing. Test data were prepared in line with the user stories. Expected results were monitored by examining the user interface. The coverage includes GUI testing, System testing, End-To-End flows across multiple languages and configurations. The testing cycle included simulation of multiple identity schema and respective UI schema configurations.

&#x20;

<table data-header-hidden><thead><tr><th valign="top"></th><th valign="top"></th><th valign="top"></th><th valign="top"></th></tr></thead><tbody><tr><td valign="top">Total</td><td valign="top">Passed</td><td valign="top">Failed</td><td valign="top">Skipped</td></tr><tr><td valign="top">3183</td><td valign="top">3110</td><td valign="top">38</td><td valign="top">35</td></tr><tr><td valign="top">Test Rate: 98% with Pass rate: 98%</td><td valign="top"></td><td valign="top"></td><td valign="top"></td></tr></tbody></table>

&#x20;

\


&#x20;

Here is the detailed breakdown:

&#x20;

<table data-header-hidden><thead><tr><th valign="top"></th><th valign="top"></th><th></th></tr></thead><tbody><tr><td valign="top"> </td><td valign="top">Test cases</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p>API Based Testing - eSignet</p></td><td valign="top">Total</td><td>2017</td></tr><tr><td valign="top">Passed</td><td valign="top">1962</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">20</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">35</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p>UI Based Testing</p><p> </p></td><td valign="top">Total</td><td>1166</td></tr><tr><td valign="top">Passed</td><td valign="top">1148</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">18</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">0</td><td></td></tr></tbody></table>

&#x20;

API Testrig results for eSignet and Signup with Mock ID:

&#x20;

&#x20;

<table data-header-hidden><thead><tr><th valign="top"></th><th valign="top"></th><th></th></tr></thead><tbody><tr><td valign="top"> </td><td valign="top">Test cases</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p>API Based Testrig - eSignet</p></td><td valign="top">Total</td><td>1011</td></tr><tr><td valign="top">Passed</td><td valign="top">93</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Ignored</td><td valign="top">918</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p> </p><p>API Based Testrig - eSignet-signup</p></td><td valign="top">Total</td><td>585</td></tr><tr><td valign="top">Passed</td><td valign="top">559</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Ignored</td><td valign="top">26</td><td></td></tr></tbody></table>

&#x20;

&#x20;

&#x20;

&#x20;

&#x20;

&#x20;

API Testrig results for eSignet and Signup with MOSIP ID:

&#x20;

<table data-header-hidden><thead><tr><th valign="top"></th><th valign="top"></th><th></th></tr></thead><tbody><tr><td valign="top"> </td><td valign="top">Test cases</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p>API Based Testrig - eSignet</p></td><td valign="top">Total</td><td>1011</td></tr><tr><td valign="top">Passed</td><td valign="top">842</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Ignored</td><td valign="top">169</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p> </p><p>API Based Testrig - eSignet-signup</p></td><td valign="top">Total</td><td>585</td></tr><tr><td valign="top">Passed</td><td valign="top">301</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">1</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Ignored</td><td valign="top">283</td><td></td></tr></tbody></table>

&#x20;

API Testrig results for eSignet and Signup with Sunbird:

&#x20;

<table data-header-hidden><thead><tr><th valign="top"></th><th valign="top"></th><th></th></tr></thead><tbody><tr><td valign="top"> </td><td valign="top">Test cases</td><td></td></tr><tr><td valign="top"><p> </p><p> </p><p>API Based Testrig - Sunbird</p></td><td valign="top">Total</td><td>1011</td></tr><tr><td valign="top">Passed</td><td valign="top">93</td><td></td></tr><tr><td valign="top">Failed</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Skipped</td><td valign="top">0</td><td></td></tr><tr><td valign="top">Ignored</td><td valign="top">918</td><td></td></tr></tbody></table>

&#x20;

Note: In API Based testing, 35 test cases are marked as skipped as they were not automated and cannot be tested using postman.

&#x20;

Detailed Test metrics:

&#x20;

Below are the detailed test metrics by performing manual/automation testing. The project metrics are derived from Defect density, Test coverage, Test execution coverage, test tracking, and efficiency.

&#x20;

The various metrics that assist in test tracking and efficiency are as follows:

&#x20;

●     Passed Test Cases Coverage: It measures the percentage of passed test cases. (Number of passed tests / Total number of tests executed) x 100

●     Failed Test Case Coverage: It measures the percentage of all failed test cases. (Number of failed tests / Total number of test cases executed) x 100

Sonar Report:\
\


<table data-header-hidden><thead><tr><th valign="top"></th><th valign="top"></th><th valign="top"></th><th valign="top"></th><th valign="top"></th><th valign="top"></th><th valign="top"></th><th valign="top"></th></tr></thead><tbody><tr><td valign="top">Repo Name</td><td valign="top">Branch Name</td><td valign="top">Release Version (POM)</td><td valign="top">Coverage (>80%)</td><td valign="top">Reliability (0)</td><td valign="top">Security (0)</td><td valign="top">Hotspots (0)</td><td valign="top">Duplications<br> (Less than 3%)</td></tr><tr><td valign="top">eSigent</td><td valign="top">develop</td><td valign="top">release-1.6.x</td><td valign="top">86.2</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0%</td></tr><tr><td valign="top"><p> </p><p>eSignet Signup</p></td><td valign="top">develop</td><td valign="top">release-1.2.x</td><td valign="top">79.3</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0%</td></tr><tr><td valign="top">esignet-mock-services</td><td valign="top"><p> </p><p> develop</p></td><td valign="top"><p> </p><p>release-0.11.x</p></td><td valign="top">83.3</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0%</td></tr><tr><td valign="top">esignet-plugins(mock-plugin)</td><td valign="top">release-1.3.x</td><td valign="top">release-1.3.x</td><td valign="top">83.0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">2.9%</td></tr><tr><td valign="top">esignet-plugins(mosip-identity-plugin)</td><td valign="top"><p> </p><p>release-1.3.2</p></td><td valign="top"><p> </p><p>release-1.3.2</p></td><td valign="top">83.6</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0%</td></tr><tr><td valign="top"><p> </p><p>esignet-plugins(sunbird-rc-plugin)</p></td><td valign="top"><p> </p><p>release-1.3.2</p></td><td valign="top"><p> </p><p>release-1.3.2</p></td><td valign="top">83</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0</td><td valign="top">0%</td></tr></tbody></table>

&#x20;
